--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@ https://templatemo.com/tm-530-mini-profile
             <!-- Logo Area -->
             <!-- Black transparent bg -->
             <div class="ml-auto mr-0 tm-bg-black-transparent text-white tm-brand-container-inner">
-              <div class="tm-brand-container text-center">
-                <img src="img/yuvraj.jpg"> </img>
-              </div>
+              <img src="img/yuvraj.jpg" class="profile-pic"> </img>
             </div>
           </div>
         </div>
