--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ https://templatemo.com/tm-530-mini-profile
           <div class="col-12">
             <!-- Logo Area -->
             <!-- Black transparent bg -->
-            <div class="ml-auto mr-0 tm-bg-black-transparent text-white tm-brand-container-inner">
-              <img src="img/yuvraj.jpg" class="profile-pic"> </img>
+              <img src="yuvraj.jpg" style="height:150px; border-radius: 50%; border: 10px solid #232D4B;" 
+              alt="This is a small profile image of Digital Ocean’s mascot, a blue smiling shark."> </img>
             </div>
           </div>
         </div>
