--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ https://templatemo.com/tm-530-mini-profile
             <!-- Black transparent bg -->
             <div class="ml-auto mr-0 tm-bg-black-transparent text-white tm-brand-container-inner">
               <div class="tm-brand-container text-center">
-                <img src = "img/yuvraj.jpg" class="row">
+                <img src = "img/yuvraj.jpg" class="pp">
               </div>
             </div>
           </div>
