--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@ https://templatemo.com/tm-530-mini-profile
             <!-- Black transparent bg -->
             <div class="ml-auto mr-0 tm-bg-black-transparent text-white tm-brand-container-inner">
               <div class="tm-brand-container text-center">
-                <img src = "img/yuvraj.jpg" class="pp">
+                <h1 class="tm-brand-name">Yuvraj Sreepathi</h1>
+                <p class="tm-brand-description mb-0">Welcome to my Personal Wesbite!</p>
               </div>
             </div>
           </div>
@@ -39,7 +40,7 @@ https://templatemo.com/tm-530-mini-profile
             <!-- White transparent bg -->
             <div class="col-md-7 tm-welcome-left-col">
               <div class="tm-welcome-left">
-                <h2 class="tm-welcome-title">Welcome to Personal Website</h2>
+                <h2 class="tm-welcome-title">About Me</h2>
                 <p class="pb-0">
                   I am a second-year undergraduate student at the University of Virginia. 
                   I am currently pursuing a B.A. in Computer Science and Statistics with an 
