--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ https://templatemo.com/tm-530-mini-profile
             <div class="ml-auto mr-0 tm-bg-black-transparent text-white tm-brand-container-inner">
               <div class="tm-brand-container text-center">
                 <h1 class="tm-brand-name">Yuvraj Sreepathi</h1>
-                <p class="tm-brand-description mb-0">Welcome to my Personal Wesbite!</p>
+                <p class="tm-brand-description mb-0">Welcome to my Personal Website.</p>
               </div>
             </div>
           </div>
@@ -46,8 +46,7 @@ https://templatemo.com/tm-530-mini-profile
                   I am currently pursuing a B.A. in Computer Science and Statistics with an 
                   Engineering Concentration. I have a vested interest in Software Engineering, 
                   Data Science, Artificial Intelligence, Web Development, Robotics, and Mobile 
-                  Application Development.
-                 </p>
+                  Application Development. </p>
               </div>
             </div>
             <!-- Brown bg -->
@@ -148,7 +147,7 @@ https://templatemo.com/tm-530-mini-profile
     <!-- End portfolio section -->
 
     <!-- Contact section -->
-    <div id="tmContact" class="parallax-window" data-parallax="scroll" data-image-src="img/mini-profile-bg-02.jpg">
+    <div id="tmContact" class="parallax-window" data-parallax="scroll" data-image-src="img/uva.jpg">
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
