--- a/index.html
+++ b/index.html
@@ -52,10 +52,7 @@ https://templatemo.com/tm-530-mini-profile
             <!-- Brown bg -->
             <div class="col-md-5">
               <div class="tm-welcome-right">
-                <i class="fas fa-4x fa-address-card p-3 tm-welcome-icon"></i>
-                <p class="mb-0">
-                  Please spread a word about templatemo website. Anyone can download free Bootstrap CSS templates.
-                </p>
+                <img src="img/yuvraj.jpg" ></img>
               </div>
             </div>
           </div>
@@ -225,16 +222,6 @@ https://templatemo.com/tm-530-mini-profile
             </form>
           </div>
         </div>
-        <!-- row -->
-        <div class="row">
-          <footer class="col-12">
-            <p class="text-center tm-copyright-text">
-            Copyright 2020 Mini Profile Page 
-            
-            - Design: Template Mo</p>
-          </footer>
-        </div>
-      </div>
       <!-- container -->
     </div>
     <!-- section -->
