--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ https://templatemo.com/tm-530-mini-profile
             <!-- Brown bg -->
             <div class="col-md-5">
               <div class="tm-welcome-right">
-                <img src="img/yuvraj.jpg" ></img>
+                <img src="img/yuvraj.jpg" alt="profile pic">
               </div>
             </div>
           </div>
