--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ https://templatemo.com/tm-530-mini-profile
             <!-- Brown bg -->
             <div class="col-md-5">
               <div class="tm-welcome-right">
-                <img src="img/yuvraj.jpg" class ="center-pp" alt="profile pic">
+                <img src="img/yuvraj.jpg" width="100px" height="100px">
               </div>
             </div>
           </div>
