--- a/index.html
+++ b/index.html
@@ -68,36 +68,37 @@ https://templatemo.com/tm-530-mini-profile
           <div class="col-12">
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-green">
-                Project Manager
+                RPA and Machine Learning Intern
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-green">
-                  New Company
-                  <span class="tm-title-small">(2019 January to Present)</span>
+                  Anika Systems
+                  <span class="tm-title-small">(2020 June - Present)</span>
                 </h3>
                 <p class="mb-0">
-                  Nullam a tellus ultricies, ornare purus vel, porttitor massa.
-                  Aliquam facilisis purus ac eros sollicidudin, in mollis neque
-                  facilisis. Duis malesuada, mi non elementum malesuada.
+                  - Led a group of interns to develop an ML model to determine the acceptability of individual clauses in End
+                  User License Agreements while utilizing the BERT pretrained model and PyTorch. <br>
+                  - Completed certifications in UIPath and ReFramework to assist employees in the development of a new tax
+                  form extraction tool employed by the IRS. <br>
+                  - Became familiar with the Agile Development Lifecycle and partook in Azure Cloud Services training.
                 </p>
               </div>
             </div>
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-orange">
-                Senior UX Designer
+                Undergraduate Research Assistant
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-orange">
-                  Studio One
-                  <span class="tm-title-small">(2017 April to 2018 Dec)</span>
+                  University of Virginia
+                  <span class="tm-title-small">(2020 August - Present)</span>
                 </h3>
                 <p class="mb-0">
-                  Phasellus ac nulla egestas, malesuada dolor quis, scelerisque
-                  arcu. Morbi aliquam, nunc vel blandit mattis, sapien nisl
-                  convallis sem, quis hendrerit nisl tellus in lectus. Proin at
-                  nibh bibendum, tincidunt mauris sit amet, porta risus. Integer
-                  id malesuada ligula.
+                  - Conducting an ongoing study to implement an improved plagiarism detection tool in all UVA Computer
+                    Science courses using Python and JPlag.
+                  - Working alongside Professor Pettit to produce a detailed report behind the psychology and motivations
+                    behind plagiarism and its effects on future classes and job opportunities.
                 </p>
               </div>
             </div>
