--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ https://templatemo.com/tm-530-mini-profile
                 </h3>
                 <p class="mb-0">
                   - Conducting an ongoing study to implement an improved plagiarism detection tool in all UVA Computer
-                    Science courses using Python and JPlag.
+                    Science courses using Python and JPlag. <br>
                   - Working alongside Professor Pettit to produce a detailed report behind the psychology and motivations
                     behind plagiarism and its effects on future classes and job opportunities.
                 </p>
