--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ https://templatemo.com/tm-530-mini-profile
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-orange">
-                Undergraduate Research Assistant
+                Research Assistant
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-orange">
@@ -102,7 +102,7 @@ https://templatemo.com/tm-530-mini-profile
                 </p>
               </div>
             </div>
-
+            <!--
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-blue">
                 Graphic Designer
@@ -138,6 +138,7 @@ https://templatemo.com/tm-530-mini-profile
                 </p>
               </div>
             </div>
+          -->
           </div>
         </div>
       </div>
