--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/templatemo-style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Yuvraj Sreepathi - Personal Website</title>
     
 <!--
@@ -150,117 +151,15 @@ https://templatemo.com/tm-530-mini-profile
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
-            <div class="tm-contact-items-container">
-              <div class="tm-contact-item">
-                <i class="fas fa-5x fa-briefcase tm-contact-item-icon"></i>
-                <p class="mb-0">
-                  Quisque venenatis viverra ultrices. Lorem ipsum dolor sit
-                  amet. Nullam sit amet tempor nisl.
-                </p>
-              </div>
-              <div class="tm-contact-item">
-                <i class="fas fa-5x fa-building tm-contact-item-icon"></i>
-                <p class="mb-0">
-                  You can absolutely feel free to use Mini Profile for your web page or any usage for your website.
-                </p>
-              </div>
-
-              <div class="tm-contact-item">
-                <i class="fas fa-5x fa-balance-scale tm-contact-item-icon"></i>
-                <p class="mb-0">
-                  You are NOT allowed to re-distribute this template in any download website. Else, it is illegal action.
-                </p>
-              </div>
+            <div class="tm-bg-white-transparent">
+              <a href="https://www.facebook.com/yuvraj.sreepathi.9" class="fa fa-facebook" target="_blank"></a>
+              <a href="https://twitter.com/yuvraj19_" class="fa fa-twitter" target="_blank"></a>
+              <a href="mailto:ys3mnq@virginia.edu" class="fa fa-google" target="_blank"></a>
+              <a href="https://www.linkedin.com/in/yuvraj-sreepathi/" class="fa fa-linkedin" target="_blank"></a>
             </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-12">
-            <form
-              action="index.html"
-              method="POST"
-              id="tmContactForm"
-              class="tm-bg-white-transparent"
-            >
-              <div class="form-group">
-                <input
-                  type="text"
-                  id="contact_name"
-                  name="contact_name"
-                  class="form-control rounded-0 border-top-0 border-right-0 border-left-0"
-                  placeholder="Name"
-                  required
-                />
-              </div>
-              <div class="form-group">
-                <input
-                  type="email"
-                  id="contact_email"
-                  name="contact_email"
-                  class="form-control rounded-0 border-top-0 border-right-0 border-left-0"
-                  placeholder="Email"
-                  required
-                />
-              </div>
-              <div class="form-group">
-                <textarea
-                  rows="4"
-                  id="contact_message"
-                  name="contact_message"
-                  class="form-control rounded-0 border-top-0 border-right-0 border-left-0"
-                  placeholder="Message"
-                  required
-                ></textarea>
-              </div>
-              <div class="text-center">
-                <button
-                  type="submit"
-                  class="btn tm-btn-submit rounded-0 text-white"
-                >
-                  Submit
-                </button>
-              </div>
-            </form>
           </div>
         </div>
       <!-- container -->
     </div>
-    <!-- section -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/parallax.min.js"></script>
-    <script>
-      function detectMsBrowser() {
-        using_ms_browser =
-          navigator.appName == "Microsoft Internet Explorer" ||
-          (navigator.appName == "Netscape" &&
-            navigator.appVersion.indexOf("Edge") > -1) ||
-          (navigator.appName == "Netscape" &&
-            navigator.appVersion.indexOf("Trident") > -1);
-
-        if (using_ms_browser == true) {
-          alert(
-            "Please use Chrome or Firefox for the best browsing experience!"
-          );
-        }
-      }
-      function setBrandMarginTop() {
-        var bottomContainerHeight = $(".tm-welcome-container").height();
-
-        $(".tm-brand-container-outer").css({
-          "margin-top": -bottomContainerHeight + "px"
-        });
-      }
-
-      $(function() {
-        setBrandMarginTop();
-        detectMsBrowser();
-
-        // Handle window resize event
-        $(window).resize(function() {
-          setBrandMarginTop();
-        });
-      });
-    </script>
   </body>
 </html>
