--- a/index.html
+++ b/index.html
@@ -103,43 +103,6 @@ https://templatemo.com/tm-530-mini-profile
                 </p>
               </div>
             </div>
-            <!--
-            <div class="tm-portfolio-item">
-              <div class="tm-portfolio-name text-white tm-bg-blue">
-                Graphic Designer
-              </div>
-              <div class="tm-portfolio-description">
-                <h3 class="tm-text-blue">
-                  Digital Com
-                  <span class="tm-title-small">(2015 Jan to 2016 Dec)</span>
-                </h3>
-                <p class="mb-0">
-                  Etiam porta est nisl, consectetur dapibus ante faucibus id.
-                  Nunc ullamcorper a quam eget tincidunt. Proin vehicula mauris
-                  ipsum, euismod dignissim dolor convallis ac.
-                </p>
-              </div>
-            </div>
-
-            <div class="tm-portfolio-item">
-              <div class="tm-portfolio-name text-white tm-bg-dark-gray">
-                Design School
-              </div>
-              <div class="tm-portfolio-description">
-                <h3 class="tm-text-dark-gray">
-                  Art Design College
-                  <span class="tm-title-small">
-                    (2012 May to 2014 Dec)
-                  </span>
-                </h3>
-                <p class="mb-0">
-                  Etiam porta est nisl, consectetur dapibus ante faucibus id.
-                  Nunc ullamcorper a quam eget tincidunt. Proin vehicula mauris
-                  ipsum, euismod dignissim dolor convallis ac.
-                </p>
-              </div>
-            </div>
-          -->
           </div>
         </div>
       </div>
@@ -151,10 +114,13 @@ https://templatemo.com/tm-530-mini-profile
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
+            <div class="tm-bg-white-transparent tm-welcome-container">
             <a href="https://www.facebook.com/yuvraj.sreepathi.9" class="fa fa-facebook" target="_blank"></a>
             <a href="https://twitter.com/yuvraj19_" class="fa fa-twitter" target="_blank"></a>
             <a href="mailto:ys3mnq@virginia.edu" class="fa fa-google" target="_blank"></a>
             <a href="https://www.linkedin.com/in/yuvraj-sreepathi/" class="fa fa-linkedin" target="_blank"></a>
+            </div>
+            
           </div>
         </div>
       <!-- container -->
