--- a/index.html
+++ b/index.html
@@ -111,16 +111,15 @@ https://templatemo.com/tm-530-mini-profile
 
     <!-- Contact section -->
     <div id="tmContact" class="parallax-window" data-parallax="scroll" data-image-src="img/uva.jpg">
+      <div class="tm-portfolio-name text-white tm-bg-green">
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
-            <div class="tm-bg-white-transparent tm-welcome-container">
             <a href="https://www.facebook.com/yuvraj.sreepathi.9" class="fa fa-facebook" target="_blank"></a>
             <a href="https://twitter.com/yuvraj19_" class="fa fa-twitter" target="_blank"></a>
             <a href="mailto:ys3mnq@virginia.edu" class="fa fa-google" target="_blank"></a>
             <a href="https://www.linkedin.com/in/yuvraj-sreepathi/" class="fa fa-linkedin" target="_blank"></a>
-            </div>
-            
+          </div>
           </div>
         </div>
       <!-- container -->
